fix:优化row-gap的外观样式

--- a/src/block/element/style.less
+++ b/src/block/element/style.less
@@ -24,6 +24,7 @@
             content   : ' ';
             background: rgba(55, 53, 47, 0.16);
             cursor    : col-resize;
+            border-radius: 2px;
         }
         &:hover,&.hover {
             opacity: 1;
